<resources>
    <string name="app_name">Donas</string>
    <!-- Progress Bar -->
    <string name="progress_bar">Cargando</string>
    <!-- Login View -->
    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_confirm_password">Confirmar Contraseña</string>
    <string name="login_sign_in">Iniciar Sesión</string>
    <string name="login_logout">Cerrar Sesión</string>
    <string name="login_sign_up">Registrarse</string>
    <string name="login_create_account">Crear una Nueva Cuenta</string>
    <string name="login_go_login">Cancelar</string>
    <string name="login_incorrect_data">Por favor verifique que los datos son correctos.</string>
    <string name="login_invalid_email">Email no es válido</string>
    <string name="login_invalid_password">La contraseña debe contenter al menos 8 caracteres</string>
    <string name="login_invalid_confirm_password">Las contraseñas no coinciden</string>
    <string name="login_success">Sesión iniciada correctamente</string>
    <string name="login_incorrect_password">La contraseña es incorrecta</string>
    <string name="login_incorrect_user">El usuario no está registrado.</string>
    <string name="login_success_signup">Registro exitoso, por favor inicie sesión</string>
    <string name="login_email_unique">El correo ya está registrado</string>
    <string name="login_logo_content_description">App Logo</string>
    <!-- ToolBar -->
    <string name="search">Buscar</string>
    <!-- Errors -->
    <string name="error_internet">No cuenta con conexión a internet</string>
    <string name="error_unexpected">Ocurrió un error inesperado.</string>
    <!-- Logout Dialog -->
    <string name="logout_dialog_title">¿Cerrar Sesión?</string>
    <string name="logout_dialog_message">La sesión actual será cerrada y se redigirá la pantalla de inicio de sesión.</string>
    <string name="logout_dialog_positive">Cerrar Sesión</string>
    <string name="logout_dialog_negative">Cancelar</string>
    <!-- Card -->
    <string name="card_topping">Topping</string>
    <string name="card_batters">Batters</string>
</resources>